--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 spring.application.name=apiProductos
 
+# Configuración para la conección a la base de datos con variables de entorno
+spring.datasource.url=jdbc:mysql://${URL_SQL}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+
 # swagger-ui custom path
-// En application.properties
+# En application.properties
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 
