--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
       <version>2.6.0</version>
    </dependency>
 
+    <dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.24</version> <!-- Verifica la última versión -->
+    <scope>provided</scope>
+</dependency>
+
    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
