--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=apiProductos
-
+server.servlet.context-path=/comercio/api/v1
 # Configuración para la conección a la base de datos con variables de entorno
-spring.datasource.url=jdbc:mysql://${URL_SQL}/${DB_NAME}
+spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
