--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
       <optional>true</optional>
     </dependency>
 
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-javadoc-plugin</artifactId>
+    <version>3.11.2</version>
+</dependency>
+
 	</dependencies>
 
 	<build>
